[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The first training project from Python developer course"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
repository = "https://github.com/ratushnyyvm/python-project-lvl1"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Games/Entertainment :: Puzzle Games",
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sympy = "^1.10.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
