[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "set of five console games"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
repository = "https://github.com/ratushnyyvm/brain-games"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Games/Entertainment :: Puzzle Games",
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
prompt = "^0.4.1"
colorama = "^0.4.5"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
